--- a/#source/scss/header.scss
+++ b/#source/scss/header.scss
@@ -1,5 +1,37 @@
-body{
-    p{
-        color:tomato
+@import "variables.scss";
+@import "null.scss";
+// header
+.section-header{
+    position: absolute;
+    height: 100px;
+    width: 100%;
+    padding: 0 50px;
+    .section-header__container{
+        max-width: none;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .header__logo{
+        .logo{
+           height: 80px; 
+           width: auto;
+           display: block;
+        }
+    }
+    .header__nav{
+        display: flex;
+        .nav__item{
+            margin-right: 35px;
+            font-weight: 600;
+            font-family: 'Montserrat';
+            font-size: 16px;
+            line-height: 29px;
+            text-align: center;
+            color: $white-text-color;
+        }
     }
 }
+// !header
