--- a/css/main.css
+++ b/css/main.css
@@ -872,3 +872,61 @@ body {
 }
 
 /* ------------------------------------------------------------------------------------------ */
+/* ------------------------------------------------------------------------------------------trens*/
+.section-trens {
+  background-color: #080808;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.section-trens .section-trens__container {
+  max-width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.section-trens .section-trens__container .section-trens__title {
+  margin-bottom: 50px;
+}
+.section-trens .section-trens__container .section-trens__title h2 {
+  color: #d81c2b;
+  font-size: 60px;
+}
+.section-trens .section-trens__container .section-trens__text {
+  margin-bottom: 50px;
+}
+.section-trens .section-trens__container .section-trens__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 50px;
+}
+.section-trens .section-trens__container .section-trens__list .list__item .item__image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 20px;
+}
+.section-trens .section-trens__container .section-trens__list .list__item .item__image img {
+  width: 100%;
+  height: auto;
+  max-width: 500px;
+}
+.section-trens .section-trens__container .section-trens__list .list__item .item__title {
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+.section-trens .section-trens__container .section-trens__list .list__item .item__text {
+  font-size: 20px;
+}
+
+/* ------------------------------------------------------------------------------------------ */
