--- a/css/exercices.css
+++ b/css/exercices.css
@@ -568,9 +568,15 @@ body {
 
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------main */
+.section-header {
+  z-index: 1;
+}
+
 .section-main {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.5))), url(../img/main/main-bg.jpg) center no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url(../img/main/main-bg.jpg) center no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.5))), url(../img/exercices/main-bg.jpg) center no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url(../img/exercices/main-bg.jpg) center no-repeat;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -596,7 +602,7 @@ body {
           flex-direction: column;
   align-items: center;
 }
-.section-main .main__text {
+.section-main .section-main__text {
   font-size: 80px;
   font-weight: 700;
   text-transform: uppercase;
@@ -609,10 +615,10 @@ body {
   gap: 50px;
   margin-bottom: 80px;
 }
-.section-main .main__text span:nth-child(2) {
+.section-main .section-main__text span:nth-child(2) {
   color: #d81c2b;
 }
-.section-main .main__button a {
+.section-main .section-main__button a {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   text-align: center;
@@ -626,87 +632,12 @@ body {
 }
 
 /* ------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------start */
-.section-start {
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
+/* ------------------------------------------------------------------------------------------exercices */
+.section-exercices {
+  padding: 200px 10px;
+  background-color: #080808;
 }
-.section-start .section-start__container {
-  max-width: none;
-}
-.section-start .section-start__container .section-start__title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 60px;
-  width: 100%;
-  text-align: center;
-  height: 100px;
-}
-.section-start .section-start__container .section-start__title .title_left {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  height: 100%;
-  line-height: 100px;
-  text-align: end;
-  color: #d81c2b;
-  background-color: #ffffff;
-  padding-right: 5px;
-}
-.section-start .section-start__container .section-start__title .title_right {
-  text-align: start;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  line-height: 100px;
-  height: 100%;
-  background-color: #d81c2b;
-  color: #ffffff;
-  padding-left: 5px;
-}
-.section-start .section-start__container .section-start__content .content__parent {
-  min-height: 400px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_image {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.9;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  background-color: #ffffff;
-  color: #d81c2b;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_text-block {
-  padding: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_text-block .text-block__text {
-  -ms-flex-preferred-size: 70%;
-      flex-basis: 70%;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_text-block .text-block__text h3 {
-  font-size: 50px;
-  margin-bottom: 10px;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_text-block .text-block__text p {
-  color: #000000;
-  font-size: 24px;
-  line-height: 30px;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_text-block .text-block__number-and-image {
+.section-exercices__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -714,215 +645,261 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-preferred-size: 20%;
-      flex-basis: 20%;
+}
+.section-exercices__list .list__group {
+  position: relative;
+  margin-bottom: 25px;
+}
+.section-exercices__list .list__group .group__item__button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  width: 100%;
+  cursor: pointer;
+}
+.section-exercices__list .list__group .group__item {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 200px;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 30px;
+  -webkit-box-shadow: 10px 5px 5px black;
+          box-shadow: 10px 5px 5px black;
+}
+.section-exercices__list .list__group .group__item h2 {
+  font-size: 70px;
+}
+.section-exercices__list .list__group .group__item:hover {
+  -webkit-filter: none;
+          filter: none;
+}
+.section-exercices__list .list__group .group__item.active {
+  -webkit-filter: none;
+          filter: none;
+}
+.section-exercices__list .list__group .group__item-1 {
+  background-image: url(../img/exercices/chest-bg.jpg);
+  background-position: center -342px;
+}
+.section-exercices__list .list__group .group__item-2 {
+  background-image: url(../img/exercices/back-bg.jpeg);
+  background-size: 100%;
+  background-position: center 70%;
+}
+.section-exercices__list .list__group .group__item-3 {
+  background-image: url(../img/exercices/shoulders-bg.jpeg);
+  background-position: center 40%;
+  background-size: 100%;
+}
+.section-exercices__list .list__group .group__item-4 {
+  background-image: url(../img/exercices/biceps-bg.jpg);
+  background-size: 100%;
+}
+.section-exercices__list .list__group .group__item-5 {
+  background-image: url(../img/exercices/triceps-bg.jpg);
+  background-size: 130%;
+}
+.section-exercices__list .list__group .group__item-6 {
+  background-image: url(../img/exercices/chest-bg.jpg);
+  background-position: center 60%;
+  background-size: 160%;
+}
+.section-exercices__list .list__group .group__item-7 {
+  background-image: url(../img/exercices/legs-bg.jpg);
+  background-size: cover;
+  background-position: center 40%;
+}
+.section-exercices__list .list__group .list__upr {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-height: 0px;
+  overflow: hidden;
+  padding-top: 25px;
+  gap: 20px;
+  flex-wrap: wrap;
+  -webkit-transition: max-height 0.4s ease-out;
+  transition: max-height 0.4s ease-out;
+}
+.section-exercices__list .list__group .list__upr .upr__item {
+  background-color: #ffffff;
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+  border-radius: 20px;
+}
+.section-exercices__list .list__group .list__upr .upr__item .item__link {
+  height: 100%;
+  width: 100%;
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.section-exercices__list .list__group .list__upr .upr__item .item__image img {
+  width: 100%;
+  height: auto;
+}
+.section-exercices__list .list__group .list__upr .upr__item .item__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_text-block .text-block__number-and-image .number-and-image__number {
-  padding-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_text-block .text-block__number-and-image .number-and-image__number span {
-  font-size: 150px;
-  line-height: 30px;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_text-block .text-block__number-and-image .number-and-image__image img {
-  width: 100%;
-  height: auto;
-  max-width: 165px;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_image1 {
-  background-image: url(../img/main/pitanie.jpg);
-  background-position: right bottom;
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_image2 {
-  background-image: url(../img/main/tren.jpg);
-}
-.section-start .section-start__container .section-start__content .content__parent .content__child_image3 {
-  background-image: url(../img/main/son.jpg);
-}
-.section-start .section-start__container .section-start__content .content__parent_reverse {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
-}
-
-/* ------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------food */
-.section-food {
-  background-color: #ffffff;
-  padding-top: 50px;
-  padding-bottom: 150px;
-}
-.section-food .section-food__container {
-  max-width: 90%;
-}
-.section-food__title {
   text-align: center;
-  margin-bottom: 50px;
-}
-.section-food__title h2 {
-  color: #d81c2b;
-  font-size: 60px;
-}
-.section-food__body {
   color: #000000;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  font-size: 40px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin-bottom: 10px;
 }
-.section-food__body .body__left {
-  border-right: 2px solid black;
-  padding-right: 20px;
-}
-.section-food__body .body__left .content {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-.section-food__body .body__right {
-  border-left: 2px solid black;
-  padding-left: 20px;
-}
-.section-food__body .body__right .item__content {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
-}
-.section-food__body .body__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-.section-food__body .body__item .item__title h3 {
-  font-size: 35px;
-  margin-bottom: 30px;
-}
-.section-food__body .body__item .item__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-}
-.section-food__body .body__item .item__content .content__image {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-}
-.section-food__body .body__item .item__content .content__image img {
-  max-height: 350px;
-  width: auto;
-}
-.section-food__body .body__item .item__content .content__text-and-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-}
-.section-food__body .body__item .item__content .content__text-and-button .text-and-button__text p {
-  line-height: 30px;
-  font-size: 20px;
-  margin-bottom: 50px;
-}
-.section-food__body .body__item .item__content .content__text-and-button .text-and-button__button {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+.section-exercices__list .list__group .list__upr.active {
+  -webkit-transition: max-height 0.4s ease-out;
+  transition: max-height 0.4s ease-out;
 }
 
-/* ------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------trens*/
-.section-trens {
-  background-color: #080808;
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-.section-trens .section-trens__container {
-  max-width: 90%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.section-trens .section-trens__container .section-trens__title {
-  margin-bottom: 50px;
-}
-.section-trens .section-trens__container .section-trens__title h2 {
-  color: #d81c2b;
-  font-size: 60px;
-}
-.section-trens .section-trens__container .section-trens__text {
-  margin-bottom: 50px;
-}
-.section-trens .section-trens__container .section-trens__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 50px;
-}
-.section-trens .section-trens__container .section-trens__list .list__item .item__image {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 20px;
-}
-.section-trens .section-trens__container .section-trens__list .list__item .item__image img {
+.popup {
+  position: fixed;
   width: 100%;
-  height: auto;
-  max-width: 500px;
-}
-.section-trens .section-trens__container .section-trens__list .list__item .item__title {
-  font-size: 30px;
-  margin-bottom: 20px;
-}
-.section-trens .section-trens__container .section-trens__list .list__item .item__text {
-  font-size: 20px;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+  z-index: 100;
 }
 
-/* ------------------------------------------------------------------------------------------ */
+.popup.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup.open .popup__content {
+  -webkit-transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+          transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+  opacity: 1;
+}
+
+.popup__area {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.popup__body {
+  min-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 30px 10px;
+  -webkit-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+}
+
+.popup__content {
+  background-color: #fff;
+  color: #000000;
+  max-width: 70%;
+  padding: 30px;
+  position: relative;
+  -webkit-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+  opacity: 0;
+  -webkit-transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+          transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+  border: 1px solid black;
+}
+.popup__content .popup__title {
+  font-size: 50px;
+  font-family: "Oswald";
+  margin-bottom: 20px;
+}
+.popup__content .popup__image img {
+  width: 100%;
+}
+.popup__content .popup__text {
+  font-size: 20px;
+  font-weight: 400;
+}
+.popup__content .popup__text h3 {
+  font-size: 30px;
+}
+.popup__content .popup__text span {
+  font-weight: bold;
+  margin-bottom: 10px;
+  display: block;
+}
+.popup__content .popup__text a {
+  margin: 20px 0;
+  font-size: 20px;
+  font-weight: bold;
+  display: block;
+  color: #0000FF;
+}
+.popup__content .popup__text a:hover {
+  text-decoration: underline;
+}
+.popup__content .popup__text ul li {
+  list-style: square;
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+.popup__content .popup__text iframe {
+  width: 100%;
+  height: 400px;
+}
+
+#chest-1 span {
+  margin-bottom: 0;
+}
+
+.popup__close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 20px;
+  color: #000000;
+}
+
+body.lock {
+  overflow: hidden;
+}
