дипломный проект:Страница Калькуляторы:начало

--- a/#source/scss/header.scss
+++ b/#source/scss/header.scss
@@ -6,6 +6,7 @@
     height: 100px;
     width: 100%;
     padding: 0 50px;
+    z-index: 1;
     .section-header__container{
         max-width: none;
         height: 100%;
