--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -4,6 +4,7 @@
 @import "header.scss";
 @import "variables.scss";
 @import "common.scss";
+@import "footer.scss";
 /* ------------------------------------------------------------------------------------------ */
 
 /* ------------------------------------------------------------------------------------------main */
