--- a/css/calcs.css
+++ b/css/calcs.css
@@ -567,6 +567,150 @@ body {
   color: #ffffff;
 }
 
+footer.site-footer {
+  background-color: #26272b;
+  padding: 30px 0 30px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
+}
+footer.site-footer .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+footer.site-footer .site-footer hr {
+  border-top-color: #bbb;
+  opacity: 0.5;
+}
+footer.site-footer .site-footer hr.small {
+  margin: 20px 0;
+}
+footer.site-footer .site-footer h6 {
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
+}
+footer.site-footer .site-footer a {
+  color: #737373;
+}
+footer.site-footer .site-footer a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+footer.site-footer .footer-links {
+  padding-left: 0;
+  list-style: none;
+}
+footer.site-footer .footer-links li {
+  display: block;
+}
+footer.site-footer .footer-links a {
+  color: #737373;
+}
+footer.site-footer .footer-links a:active, footer.site-footer .footer-links a:focus, footer.site-footer .footer-links a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+footer.site-footer .footer-links.inline li {
+  display: inline-block;
+}
+footer.site-footer .site-footer .social-icons {
+  text-align: right;
+}
+footer.site-footer .site-footer .social-icons a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d;
+}
+footer.site-footer .copyright-text {
+  margin: 0;
+}
+@media (max-width: 991px) {
+  footer.site-footer .site-footer [class^=col-] {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 767px) {
+  footer.site-footer .site-footer {
+    padding-bottom: 0;
+  }
+  footer.site-footer .site-footer .copyright-text, footer.site-footer .site-footer .social-icons {
+    text-align: center;
+  }
+}
+footer.site-footer .social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+footer.site-footer .social-icons li {
+  display: inline-block;
+  margin-bottom: 4px;
+}
+footer.site-footer .social-icons li.title {
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px;
+}
+footer.site-footer .social-icons a {
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+footer.site-footer .social-icons a:active, footer.site-footer .social-icons a:focus, footer.site-footer .social-icons a:hover {
+  color: #fff;
+  background-color: #29aafe;
+}
+footer.site-footer .social-icons.size-sm a {
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px;
+}
+footer.site-footer .social-icons a.facebook:hover {
+  background-color: #3b5998;
+}
+footer.site-footer .social-icons a.twitter:hover {
+  background-color: #00aced;
+}
+footer.site-footer .social-icons a.linkedin:hover {
+  background-color: #007bb6;
+}
+footer.site-footer .social-icons a.dribbble:hover {
+  background-color: #ea4c89;
+}
+@media (max-width: 767px) {
+  footer.site-footer .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600;
+  }
+}
+
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------main */
 .section-main {
@@ -614,19 +758,20 @@ body {
   padding: 100px 0px;
   background-color: #080808;
 }
-.section-calcs .section-calcs__container .section-calcs__calc-list {
+.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__item {
+  margin-bottom: 50px;
   color: #ffffff;
 }
-.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__text {
+.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__item .calc-list__text {
   font-size: 20px;
   margin-bottom: 20px;
 }
-.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__title {
+.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__item .calc-list__title {
   font-size: 50px;
   text-align: center;
   margin-bottom: 20px;
 }
-.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__body {
+.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__item .calc-list__body {
   width: 500px;
   padding: 10px;
   margin: 0 auto;
@@ -641,7 +786,7 @@ body {
           flex-direction: column;
   background-color: #ecf0f1;
 }
-.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__body .variable {
+.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__item .calc-list__body .variable {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -651,13 +796,164 @@ body {
   font-size: 20px;
   margin-bottom: 10px;
 }
-.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__body .variable input {
+.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__item .calc-list__body .variable input {
   display: block;
   width: 100px;
   border-radius: 4px;
   border: 1px solid black;
 }
-.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__body .result-button {
+.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__item .calc-list__body .results {
+  max-height: 0px;
+  overflow: hidden;
+  font-size: 20px;
+}
+.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__item .calories-calc {
+  width: 700px;
+}
+
+.calc-wrap #calories {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 25px;
+  margin-bottom: 30px;
+}
+.calc-wrap #calories .calc-radio-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.calc-wrap #calories .sex {
+  width: 100%;
+  text-align: center;
+}
+.calc-wrap #calories .sex p {
+  margin-bottom: 10px;
+}
+.calc-wrap #calories .sex .calc-sex {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-bottom: 20px;
+}
+.calc-wrap #calories .params {
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  width: 100%;
+}
+.calc-wrap #calories .params .calc-caption {
+  margin-bottom: 20px;
+}
+.calc-wrap #calories .params .calc-input-and-naim {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.calc-wrap #calories .params .calc-input-and-naim .calc-input input {
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  text-align: center;
+  margin-right: 10px;
+  border-radius: 5px;
+}
+.calc-wrap #calories .params .calc-input-and-naim .naim {
+  font-size: 20px;
+}
+.calc-wrap #calories .goactivity {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.calc-wrap #calories .goactivity .calc-radio-item {
+  font-size: 20px;
+}
+.calc-wrap #calories .goactivity .calc-caption {
+  text-align: center;
+  margin-bottom: 10px;
+}
+.calc-wrap #calories .goactivity .activity .a-width {
+  font-size: 20px;
+  border-radius: 5px;
+  padding: 5px;
+}
+.calc-wrap #calories .results {
+  width: 100%;
+}
+.calc-wrap #calories .results .main-result {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+.calc-wrap #calories .results .result-table {
+  font-size: 20px;
+}
+
+.radio {
+  width: 1.3rem;
+  height: 1.3rem;
+  -webkit-transition: background-color 0.15s;
+  transition: background-color 0.15s;
+  margin-right: 10px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  vertical-align: text-bottom;
+  outline: 0;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 0 0 1px #727e96;
+          box-shadow: inset 0 0 0 1px #727e96;
+  border-radius: 1.3em;
+  background: #fff;
+}
+.radio:checked {
+  background-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20standalone%3D%22no%22%3F%3E%3Csvg%20version%3D%221.1%22%20width%3D%2240%22%20height%3D%2240%22%0AviewBox%3D%220%200%2080%2080%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%3E%3Ccircle%20cx%3D%2240%22%20cy%3D%2240%22%20r%3D%2224%22%20style%3D%22fill%3A%23ffffff%22/%3E%3C/svg%3E);
+  background-size: 80% 80%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #727e96;
+}
+.radio ~ label {
+  cursor: pointer;
+}
+.radio::-ms-check {
+  display: none;
+}
+
+/* ------------------------------------------------------------------------------------------ */
+.result-button {
   margin: 20px auto 10px;
   display: block;
   background: #FFA310;
@@ -668,10 +964,51 @@ body {
   padding: 11px 16px 10px;
   cursor: pointer;
 }
-.section-calcs .section-calcs__container .section-calcs__calc-list .calc-list__body .results {
-  max-height: 0px;
-  overflow: hidden;
-  font-size: 20px;
-}
 
-/* ------------------------------------------------------------------------------------------ */
+.cross-fade {
+  display: inline-block;
+  padding: 16px 28px;
+  border: 2px black solid;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: color 0.75s ease-in-out;
+  transition: color 0.75s ease-in-out;
+  z-index: 1;
+  border-radius: 0px;
+}
+.cross-fade:before, .cross-fade:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -25%;
+  width: 150%;
+  height: 100%;
+  background: rgba(102, 102, 102, 0.5);
+  -webkit-transition: -webkit-transform 0.75s ease-in-out;
+  transition: -webkit-transform 0.75s ease-in-out;
+  transition: transform 0.75s ease-in-out;
+  transition: transform 0.75s ease-in-out, -webkit-transform 0.75s ease-in-out;
+  z-index: -1;
+}
+.cross-fade:before {
+  -webkit-transform: translate3d(100%, 0, 0) skew(20deg);
+          transform: translate3d(100%, 0, 0) skew(20deg);
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+}
+.cross-fade:after {
+  -webkit-transform: translate3d(-100%, 0, 0) skew(20deg);
+          transform: translate3d(-100%, 0, 0) skew(20deg);
+  -webkit-transform-origin: 100% 100%;
+          transform-origin: 100% 100%;
+}
+.cross-fade:hover {
+  color: white;
+}
+.cross-fade:hover:before, .cross-fade:hover:after {
+  -webkit-transform: translate3d(0, 0, 0) skew(20deg);
+          transform: translate3d(0, 0, 0) skew(20deg);
+}
