--- a/css/main.css
+++ b/css/main.css
@@ -567,6 +567,150 @@ body {
   color: #ffffff;
 }
 
+footer.site-footer {
+  background-color: #26272b;
+  padding: 30px 0 30px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
+}
+footer.site-footer .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+footer.site-footer .site-footer hr {
+  border-top-color: #bbb;
+  opacity: 0.5;
+}
+footer.site-footer .site-footer hr.small {
+  margin: 20px 0;
+}
+footer.site-footer .site-footer h6 {
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
+}
+footer.site-footer .site-footer a {
+  color: #737373;
+}
+footer.site-footer .site-footer a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+footer.site-footer .footer-links {
+  padding-left: 0;
+  list-style: none;
+}
+footer.site-footer .footer-links li {
+  display: block;
+}
+footer.site-footer .footer-links a {
+  color: #737373;
+}
+footer.site-footer .footer-links a:active, footer.site-footer .footer-links a:focus, footer.site-footer .footer-links a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+footer.site-footer .footer-links.inline li {
+  display: inline-block;
+}
+footer.site-footer .site-footer .social-icons {
+  text-align: right;
+}
+footer.site-footer .site-footer .social-icons a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d;
+}
+footer.site-footer .copyright-text {
+  margin: 0;
+}
+@media (max-width: 991px) {
+  footer.site-footer .site-footer [class^=col-] {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 767px) {
+  footer.site-footer .site-footer {
+    padding-bottom: 0;
+  }
+  footer.site-footer .site-footer .copyright-text, footer.site-footer .site-footer .social-icons {
+    text-align: center;
+  }
+}
+footer.site-footer .social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+footer.site-footer .social-icons li {
+  display: inline-block;
+  margin-bottom: 4px;
+}
+footer.site-footer .social-icons li.title {
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px;
+}
+footer.site-footer .social-icons a {
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+footer.site-footer .social-icons a:active, footer.site-footer .social-icons a:focus, footer.site-footer .social-icons a:hover {
+  color: #fff;
+  background-color: #29aafe;
+}
+footer.site-footer .social-icons.size-sm a {
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px;
+}
+footer.site-footer .social-icons a.facebook:hover {
+  background-color: #3b5998;
+}
+footer.site-footer .social-icons a.twitter:hover {
+  background-color: #00aced;
+}
+footer.site-footer .social-icons a.linkedin:hover {
+  background-color: #007bb6;
+}
+footer.site-footer .social-icons a.dribbble:hover {
+  background-color: #ea4c89;
+}
+@media (max-width: 767px) {
+  footer.site-footer .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600;
+  }
+}
+
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------main */
 .section-main {
